added tests with mocking
